--- a/svc.yml
+++ b/svc.yml
@@ -7,7 +7,8 @@ spec:
   selector:
     name: myapp
   ports:
-  - protocol: TCP
+  - name: http
+    protocol: TCP
     port: 8080
-    targetPort: 8080
+    nodePort: 22
   
