--- a/dev.yml
+++ b/dev.yml
@@ -17,4 +17,4 @@ metadata:
         - name: myapp
           image: srinath246/myapp:1
           ports:
-          - containerPorts: 8080
+          - containerPort: 8080
