--- a/dev.yml
+++ b/dev.yml
@@ -19,4 +19,6 @@ spec:
       - name: myapp
         image: srinath246/myapp:1
         ports:
-        - containerPort: 80
+        - containerPort: 8080
+          targetPort: 3000
+          
