--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,8 +7,13 @@ node{
         //mvn package
         sh 'mvn package'
     }
-    stage("archival") {
-        //archival archifact
-        artifacts: 'target/*.jar'
+    stage('SonarQube analysis') {
+    // performing sonarqube analysis with "withSonarQubeENV(<Name of Server configured in Jenkins>)"
+    withSonarQubeEnv('sonar') {
+      // requires SonarQube Scanner for Maven 3.2+
+      sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+    }
+    stage('email'){
+        mail bcc: '', body: '', cc: '', from: '', replyTo: '', subject: 'failed', to: 'Srinathshetty1997@gmail.com'
     }
 }
