--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,7 +9,7 @@ node{
         sh 'mvn package'   
     }
     stage('SonarQube analysis') {
-    // performing sonarqube analysis with "withSonarQubeENV(<Name of Server configured in Jenkins>)"
+    // performing sonarqube analysis with "withSonarQubeENV(sonar)"
     withSonarQubeEnv('sonar') {
       // requires SonarQube Scanner for Maven 3.2+
       sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
