--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,10 +9,10 @@ node{
         sh 'mvn package'   
     }
     stage('SonarQube analysis') {
-    // performing sonarqube analysis with "withSonarQubeENV(sonar)"
-    withSonarQubeEnv('sonar') {
+    // performing sonarqube analysis with "withSonarQubeENV(<Name of Server configured in Jenkins>)"
+    withSonarQubeEnv('SONAR') {
       // requires SonarQube Scanner for Maven 3.2+
-      sh 'mvn org.sonarsource.scanner.maven:sonar-maven-plugin:3.2:sonar'
+        sh 'mvn package'
     }
     stage('email'){
         mail bcc: '', body: '', cc: '', from: '', replyTo: '', subject: 'failed', to: 'Srinathshetty1997@gmail.com'
