--- a/jenkinsfile
+++ b/jenkinsfile
@@ -14,6 +14,12 @@ node{
       // requires SonarQube Scanner for Maven 3.2+
         sh 'mvn package'
     }
+    stage('docker build'){
+        sh 'docker build -t spring .'
+    }
+     stage('docker run'){
+        sh 'docker run -it spring'
+    }
     stage('email'){
         mail bcc: '', body: '', cc: '', from: '', replyTo: '', subject: 'failed', to: 'Srinathshetty1997@gmail.com'
     }
